tests/testcases/valid/classes/24_initialiser_list.ciel
int printf(char *format, ...);

struct x{
    int y;
};

struct z {
    int a;
    struct x obj;
};

struct w {
    int p;
    struct z inner;
};

int main(){
    struct z aura = (struct z){.a = 1, .obj.y = 0};
    
    struct w container = (struct w){.p = 5, .inner = aura};

    printf("aura.a: %d\n", aura.a);
    printf("container.p: %d\n", container.p);
    printf("container.inner.a: %d\n", container.inner.a);
    printf("container.inner.obj.y: %d\n", container.inner.obj.y);
    
    
    return 0;
}
